@@ -384,7 +384,8 @@ Prints debugging information for this interface.
 =item $self->verilog_text
 
 Returns verilog code which represents this interface.  Returned as an array
-that must be joined together to form the final text string.
+that must be joined together to form the final text string.  The netlist
+must be already ->link'ed for this to work correctly.
 
 =back
 
