@@ -475,6 +475,14 @@ verilog/pinorder.v:042: PORT  'noconnect' 'module' 'input' 'signed [3:0]' '' '0'
 verilog/pinorder.v:043: VAR  'port' 'def' 'module' '' '[31:0]' '' ''
 verilog/pinorder.v:043: PORT  'def' 'module' 'input' '[31:0]' '' '0'
 verilog/pinorder.v:044: ENDMODULE  'endmodule'
+verilog/pinorder.v:046: MODULE  'module' 'bug278' undef '0'
+verilog/pinorder.v:048: VAR  'port' 'ow' 'module' 'wire' '' '' ''
+verilog/pinorder.v:048: PORT  'ow' 'module' 'output' '' '' '1'
+verilog/pinorder.v:049: VAR  'port' 'iow' 'module' 'wire' '' '' ''
+verilog/pinorder.v:049: PORT  'iow' 'module' 'inout' '' '' '2'
+verilog/pinorder.v:050: VAR  'port' 'iw' 'module' 'wire' '' '' ''
+verilog/pinorder.v:050: PORT  'iw' 'module' 'input' '' '' '3'
+verilog/pinorder.v:051: ENDMODULE  'endmodule'
 verilog/parser_sv.v:001: PACKAGE  'package' 'mypackage'
 verilog/parser_sv.v:002: VAR  'var' 'pkg_addr' 'package' '' 'bit [7:0]' '' ''
 verilog/parser_sv.v:003: VAR  'var' 'pkg_data' 'package' '' 'bit [7:0]' '' ''
