@@ -1,3 +1,10 @@
+module bug278 (
+   iow, iw, ow);
+   inout iow;
+   input iw;
+   output ow;
+endmodule
+
 module foo (
    abcconst, def, noconnect, x, y);
    input [2:0] abcconst;
